#######################################
#######################################
##
## File:
##	\file configure.ac
##
## Description:
##	\breif ...
##
## Author:
##	\author J. Caleb Wherry
##
## Created:
##	\date 9/15/2013
##
#######################################
#######################################

# Init Stuff:
AC_INIT(CppLibsConfig, version-1.0)

# Compiler Checks and Sets:
AC_PROG_CXX
AC_LANG(C++)

# Header Checks:
AC_CHECK_HEADERS(iostream)
